# AppleMusicDecrypt

./: .gitignore  README.md  android-deploy.md  config.example.toml  main.py  pyproject.toml
.github/workflows/: win-build.yml
extras/telegram_bot/: README.md  config.example.toml  main.py
extras/telegram_bot/src/: auth.py  config.py  db.py  upload.py
extras/telegram_bot/src/handlers/: admin.py  download.py  login.py  notifications.py  settings.py
src/: api.py  cmd.py  config.py  logger.py  measurer.py  metadata.py  mp4.py  qemu.py  quality.py  rip.py  save.py  task.py  utils.py
src/grpc/: manager.proto  manager.py  manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py
src/models/: album_meta.py  album_tracks.py  artist_albums.py  artist_info.py  artist_songs.py  playlist_info.py  plsylist_tracks.py  song_data.py  song_lyrics.py
