[tool.poetry]
name = "applemusicdecrypt"
version = "0.1.0"
description = ""
authors = ["WorldObservationLog <wolc@duck.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
regex = "^2025.9.18"
pydantic = "^2.12.3"
loguru = "^0.7.2"
six = "^1.16.0"
lxml = "^6.0.2"
beautifulsoup4 = "^4.14.2"
m3u8 = "^6.0.0"
tenacity = "^9.1.2"
prompt-toolkit = "^3.0.52"
prettytable = "^3.10.0"
pyventus = "^0.7.0"
grpcio = "^1.75.1"
grpcio-tools = "^1.75.1"
pywidevine = {git = "https://github.com/WorldObservationLog/pywidevine"}
creart = "^0.3.0"
mutagen = "^1.47.0"
hishel = "^0.1.5"
async-lru = "^2.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
